chore: remove coveralls and nyc

--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "scripts": {
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test:local": "FORCE_COLOR=true node bin/index.js --local",
-    "test": "nyc node japaFile.js",
-    "test:win": "node ./node_modules/japa-cli/index.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "node japaFile.js",
+    "test:win": "node japaFile.js",
     "commit": "git-cz",
     "lint": "standard"
   },
@@ -27,11 +25,9 @@
     "@adonisjs/mrm-preset": "^3.0.0",
     "clear-module": "^4.1.1",
     "commitizen": "^4.2.3",
-    "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "japa": "^3.1.1",
     "mrm": "^2.6.1",
-    "nyc": "^15.1.0",
     "pkg-ok": "^2.3.1",
     "semver": "^7.3.5",
     "standard": "^16.0.3"
