--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "getopts": "^2.3.0",
     "leven": "^3.1.0",
     "mustache": "^4.2.0",
+    "omelette": "^0.4.17",
     "slash": "^3.0.0",
     "term-size": "^2.2.1"
   },
@@ -62,16 +63,17 @@
     "@adonisjs/require-ts": "^2.0.8",
     "@poppinss/dev-utils": "^1.1.5",
     "@types/node": "^16.11.1",
+    "@types/omelette": "^0.4.1",
     "del-cli": "^4.0.1",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-adonis": "^1.3.3",
     "eslint-plugin-prettier": "^4.0.0",
-    "github-label-sync": "^2.0.1",
+    "github-label-sync": "^1.3.0",
     "husky": "^7.0.1",
     "japa": "^3.1.1",
-    "mrm": "^3.0.10",
-    "np": "^7.5.0",
+    "mrm": "^2.6.2",
+    "np": "^5.1.3",
     "prettier": "^2.4.1",
     "reflect-metadata": "^0.1.13",
     "typescript": "^4.4.4"
